# tax-estimator

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  EVALUATION.md  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.cursor/: cli.json
.cursor/rules/: consolidated-rules.mdc
docs/: BackendPersistenceMigration.md  SeWorksheet.md  TaxEstimatePersistencePlan.md  WASM_Plan.md
scripts/: extract_field_instructions.py
tax-core/: Cargo.toml
tax-core/src/: encode.rs  lib.rs
tax-core/src/calculations/: common.rs  mod.rs  se_worksheet.rs
tax-core/src/calculations/worksheets/: est_tax.rs  mod.rs  self_emp.rs
tax-core/src/db/: factory.rs  mod.rs  persist.rs  record.rs  repository.rs
tax-core/src/models/: estimated_tax_calculation.rs  filing_status.rs  mod.rs  standard_deduction.rs  tax_bracket.rs  tax_estimate.rs  tax_year_config.rs
tax-data/: Cargo.toml
tax-data/src/: lib.rs  loader.rs
tax-data/test-data/: tax_brackets_2025.csv
tax-data/tests/: integration_test.rs
tax-db/: Cargo.toml
tax-db-macros/: Cargo.toml
tax-db-macros/src/: lib.rs
tax-db-macros/tests/: insert.rs
tax-db-sqlite/: Cargo.toml
tax-db-sqlite/migrations/: 20260106021323_initial_schema.sql  20260107000000_add_min_se_threshold.sql
tax-db-sqlite/seeds/: 01_filing_status.sql  02_tax_year_config_2025.sql  03_standard_deductions_2025.sql  04_tax_brackets_2025.sql
tax-db-sqlite/src/: decimal.rs  factory.rs  lib.rs  repository.rs
tax-db-sqlite/src/records/: filing_status.rs  mod.rs  standard_deduction.rs  tax_bracket.rs  tax_estimate.rs  tax_year_config.rs
tax-db-sqlite/tests/: entity_insert.rs
tax-db/src/: lib.rs
tax-ui/: Cargo.toml
tax-ui/resources/: field_instructions.toml
tax-ui/src/: app.rs  csv_loader.rs  gui.rs  instructions.rs  lib.rs  logging.rs  main.rs  repository.rs  state.rs  utils.rs
tax-ui/src/components/: dialogs.rs  estimate_form.rs  estimate_selector.rs  file_menu.rs  file_picker.rs  filters.rs  form_helpers.rs  mod.rs  results_form.rs  se_worksheet_form.rs  theme.rs  window.rs
tax-ui/src/config/: mod.rs  store.rs
tax-ui/src/models/: estimates_model.rs  file_form.rs  mod.rs  se_worksheet_model.rs
tax-ui/src/screens/: estimate_list.rs  main_estimate.rs  mod.rs  self_employment.rs
tax-ui/src/themes/: linux_theme.rs  macos_theme.rs  mod.rs  windows_theme.rs
tax-ui/src/views/: est_tax_worksheet.rs  estimate_workflow.rs  main_menu.rs  mod.rs  se_worksheet.rs  status_bar.rs
tax-ui/src/widgets/: currency.rs  mod.rs
tax-ui/tests/: csv_loader_integration.rs  estimate_calculation_integration.rs
tax-ui/tests/fixtures/: sample_estimates.csv
