[workspace]
resolver = "2"
members = ["tax-core", "tax-db-sqlite", "tax-ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Data types
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "1"
