[workspace]
resolver = "3"
members = ["tax-core", "tax-data", "tax-db-sqlite", "tax-ui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
pretty_assertions = "1"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
