[package]
name = "tax-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
pretty_assertions.workspace = true
tracing-subscriber.workspace = true