[package]
name = "tax-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
sqlx = { workspace = true }
tax-db-macros = { version = "0.1.0", path = "../tax-db-macros" }

[dev-dependencies]
rust_decimal_macros.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
