[package]
name = "tax-db-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
tax-core = { path = "../tax-core" }
tokio.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
async-trait.workspace = true
rust_decimal.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rust_decimal_macros.workspace = true
