[package]
name = "tax-db-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tax-core = { path = "../tax-core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions = "1"
rust_decimal_macros.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
