[package]
name = "tax-ui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace            = true
chrono.workspace = true
clap.workspace              = true
csv.workspace               = true
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
regex.workspace = true
rfd = "0.17.2"
rust_decimal.workspace      = true
serde.workspace             = true
tax-core                    = { path = "../tax-core" }
tax-db-sqlite               = { path = "../tax-db-sqlite" }
thiserror.workspace         = true
tokio.workspace             = true
tracing.workspace           = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSAppearance", "NSColor", "NSColorSpace"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_System_Registry", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[dev-dependencies]
rust_decimal_macros.workspace = true
pretty_assertions.workspace = true

[lib]
name = "tax_ui"
path = "src/lib.rs"

[[bin]]
name = "tax-ui"
path = "src/main.rs"
